src/objects/States__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>State Attributes</description>
    <fields>
        <fullName>DefaultTimeZoneKey__c</fullName>
        <description>Default TimeZone Key value for use in User.TimeZoneSidKey field values.</description>
        <label>Default Time Zone Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EducatorBasicSkillsCodes__c</fullName>
        <description>Assessment code(s) for passing the Teachers&apos; Basic Skills Assessment for the given state.</description>
        <inlineHelpText>If multiple assessments are required, separate each with a comma. If any of a list is acceptable, separate each with a space. E.g. &apos;MI01,MI02,MI03&apos; = &apos;MI01 AND MI02 AND MI03&apos;, &apos;ACBC AWBT PXST&apos; = &apos;ACBC OR AWBT OR PXST&apos;</inlineHelpText>
        <label>Educator Basic Skills Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateFullName__c</fullName>
        <description>Full name of State</description>
        <externalId>true</externalId>
        <label>State FullName</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>States</label>
</CustomObject>